TViewerFrame クラス内に３Ｄシーンを構築。

--- a/Viewer.fmx
+++ b/Viewer.fmx
@@ -8,5 +8,9 @@ object ViewerFrame: TViewerFrame
     Size.Width = 512.000000000000000000
     Size.Height = 512.000000000000000000
     Size.PlatformDefault = False
+    UsingDesignCamera = False
+    OnMouseDown = Viewport3D1MouseDown
+    OnMouseMove = Viewport3D1MouseMove
+    OnMouseUp = Viewport3D1MouseUp
   end
 end
