--- a/Main.fmx
+++ b/Main.fmx
@@ -50,9 +50,9 @@ object Form1: TForm1
     object ComboBox1: TComboBox
       Items.Strings = (
         'TALFsN8'
-        'TALFsStandard'
-        'TNALFsStandard'
-        'TNALFsEnomoto')
+        'TALFsTerm3'
+        'TNALFsTerm3'
+        'TNALFsTerm4')
       ItemIndex = 0
       Position.X = 10.000000000000000000
       Position.Y = 70.000000000000000000
@@ -72,7 +72,7 @@ object Form1: TForm1
     Size.Width = 562.000000000000000000
     Size.Height = 558.000000000000000000
     Size.PlatformDefault = False
-    TabIndex = 1
+    TabIndex = 0
     TabOrder = 1
     TabPosition = PlatformDefault
     Sizes = (
@@ -85,7 +85,7 @@ object Form1: TForm1
         item
         end>
       TextSettings.Trimming = None
-      IsSelected = False
+      IsSelected = True
       Size.Width = 35.000000000000000000
       Size.Height = 26.000000000000000000
       Size.PlatformDefault = False
@@ -113,13 +113,13 @@ object Form1: TForm1
         item
         end>
       TextSettings.Trimming = None
-      IsSelected = True
-      Size.Width = 45.000000000000000000
+      IsSelected = False
+      Size.Width = 44.000000000000000000
       Size.Height = 26.000000000000000000
       Size.PlatformDefault = False
       StyleLookup = ''
       TabOrder = 0
-      Text = 'ALPs'
+      Text = 'ALFs'
       ExplicitSize.cx = 45.000000000000000000
       ExplicitSize.cy = 26.000000000000000000
       object ScrollBar1: TScrollBar
