--- a/ViewerSH3D.fmx
+++ b/ViewerSH3D.fmx
@@ -1,4 +1,4 @@
-object ViewerFrame: TViewerFrame
+object ViewerSH3DFrame: TViewerSH3DFrame
   Size.Width = 512.000000000000000000
   Size.Height = 512.000000000000000000
   Size.PlatformDefault = False
