--- a/Main.fmx
+++ b/Main.fmx
@@ -71,7 +71,7 @@ object Form1: TForm1
           Size.Height = 20.000000000000000000
           Size.PlatformDefault = False
           TextSettings.HorzAlign = Trailing
-          Text = 'N :'
+          Text = 'n :'
           TabOrder = 5
         end
         object SpinBoxSN: TSpinBox
@@ -92,6 +92,7 @@ object Form1: TForm1
           TabOrder = 7
           Cursor = crIBeam
           Max = 512.000000000000000000
+          Value = 3.000000000000000000
           Position.X = 75.000000000000000000
           Position.Y = 50.000000000000000000
           Size.Width = 110.000000000000000000
@@ -106,7 +107,7 @@ object Form1: TForm1
           Size.Height = 20.000000000000000000
           Size.PlatformDefault = False
           TextSettings.HorzAlign = Trailing
-          Text = 'M :'
+          Text = 'm :'
           TabOrder = 4
         end
       end
